--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <html>
-  <head>
-	  <title>LAN: TEDxZhongshanbridge 2018</title>
-  </head>
-
-<body>
-
-  Hello World!
-
-</body>
+	<head>
+		<title>LAN: TEDxZhongshanbridge 2018</title>
+	</head>
+	<body>
+	    <div align="center">
+		    <img src="./source/TEDxLogoWhite.jpg"  alt="TEDx中山桥兰州大会：LAN" />
+	    </div>
+	</body>
 </html>
