--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	    <div align="center">
-		    <img src="./source/TEDxLogoWhite.jpg"  alt="TEDx中山桥兰州大会：LAN" />
+		    <img src="/TEDx/source/TEDxLogoWhite.jpg"  alt="TEDx中山桥兰州大会：LAN" />
 	    </div>
 	</body>
 </html>
